--- a/autolife-web/index.html
+++ b/autolife-web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AutoLife 语音助手</title>
+    <title>AutoLife 助手</title>
     <!-- Polyfill for global (needed by recorder-js) -->
     <script>
       window.global = window;
